# corevoikko

./: .gitignore  CLAUDE.md  LEARNING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
data/: CLAUDE.md
docker/: CLAUDE.md
docs/: CLAUDE.md  carbon-type.css  index.html
libvoikko/: .gitignore  CLAUDE.md  README
libvoikko/cl/: CLAUDE.md  voikko-rust.lisp
libvoikko/cs/: CLAUDE.md  VoikkoRust.cs
libvoikko/data/: CLAUDE.md
libvoikko/doc/: CLAUDE.md
libvoikko/java/: CLAUDE.md
libvoikko/java/src/main/java/org/puimula/libvoikko/: VoikkoRust.java
libvoikko/js/: CLAUDE.md  README.md  build.sh  package.json  test.html  tsconfig.json  tsdown.config.ts  vitest.config.ts
libvoikko/js/dict/: autocorr.vfst  index.txt  mor.vfst
libvoikko/js/src/: index.ts  types.ts  wasm-loader.ts
libvoikko/js/test/: setup-dict.ts  voikko.test.ts
libvoikko/legacy/: CLAUDE.md
libvoikko/legacy/cpp-test/: DictionaryInfoTest.py  TestUtils.py
libvoikko/legacy/cpp-test/hfst/: MeadowMariTest.py
libvoikko/legacy/emscripten/: build.sh
libvoikko/python/: CLAUDE.md  README.md  libvoikkoOld.py
libvoikko/rust/: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml
libvoikko/rust/crates/voikko-cli/: CLAUDE.md  Cargo.toml
libvoikko/rust/crates/voikko-cli/src/: lib.rs
libvoikko/rust/crates/voikko-core/: CLAUDE.md  Cargo.toml
libvoikko/rust/crates/voikko-core/src/: analysis.rs  case.rs  character.rs  enums.rs  grammar_error.rs  lib.rs  token.rs
libvoikko/rust/crates/voikko-ffi/: CLAUDE.md  Cargo.toml
libvoikko/rust/crates/voikko-ffi/include/: voikko.h
libvoikko/rust/crates/voikko-ffi/python/voikko/: __init__.py  _binding.py
libvoikko/rust/crates/voikko-ffi/src/: lib.rs
libvoikko/rust/crates/voikko-fi/: CLAUDE.md  Cargo.toml
libvoikko/rust/crates/voikko-fi/benches/: voikko_bench.rs
libvoikko/rust/crates/voikko-fi/examples/: analyze_test.rs
libvoikko/rust/crates/voikko-fi/src/: handle.rs  lib.rs
libvoikko/rust/crates/voikko-fi/src/finnish/: constants.rs
libvoikko/rust/crates/voikko-fi/src/grammar/: autocorrect.rs  cache.rs  checker.rs  checks.rs  engine.rs  finnish_analysis.rs  mod.rs  paragraph.rs
libvoikko/rust/crates/voikko-fi/src/hyphenator/: mod.rs
libvoikko/rust/crates/voikko-fi/src/morphology/: finnish.rs  mod.rs  tag_parser.rs  vfst.rs
libvoikko/rust/crates/voikko-fi/src/speller/: adapter.rs  cache.rs  finnish.rs  mod.rs  pipeline.rs  utils.rs
libvoikko/rust/crates/voikko-fi/src/suggestion/: generators.rs  mod.rs  status.rs  strategy.rs  vfst.rs
libvoikko/rust/crates/voikko-fi/src/tokenizer/: mod.rs
libvoikko/rust/crates/voikko-fi/tests/: differential.rs
libvoikko/rust/crates/voikko-fst/: CLAUDE.md  Cargo.toml
libvoikko/rust/crates/voikko-fst/examples/: fst_test.rs
libvoikko/rust/crates/voikko-fst/src/: config.rs  flags.rs  format.rs  lib.rs  symbols.rs  transition.rs  unweighted.rs  weighted.rs
libvoikko/rust/crates/voikko-wasm/: CLAUDE.md  Cargo.toml
libvoikko/rust/crates/voikko-wasm/src/: lib.rs
libvoikko/rust/tests/differential/: capture_cpp.py  wordlist.txt
libvoikko/rust/tests/differential/golden/: analyze.json  hyphenate.json  spell.json  suggest.json
libvoikko/test/: DeprecatedApiTest.py  NullComponentTest.py  Utf8ApiTest.py  libvoikkoOldTest.py  libvoikkoTest.py
libvoikko/test/hfst/: NorthSamiTest.py
libvoikko/test/lttoolbox/: ApertiumIcelandicTest.py
plan/: 01-codebase-analysis.md  02-emscripten.md  03-rust-wasm.md  04-typescript.md  05-zig-wasm.md  06-comparison.md  07-toolchain.md  README.md
plan/phase2-rust/: 00-master-plan.md  01-dependency-graph.md  02-fst-engine.md  03-modules-analysis.md  04-rust-ecosystem.md  05-dev-guidelines.md  06-suggest-rich-priority.md
tests/: CLAUDE.md
tools/: CLAUDE.md
voikko-fi/: CLAUDE.md
