[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MPL-1.1 OR GPL-2.0-or-later OR LGPL-2.1-or-later"

[workspace.dependencies]
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
hashbrown = "0.15"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
voikko-core = { path = "crates/voikko-core" }
voikko-fst = { path = "crates/voikko-fst" }
voikko-fi = { path = "crates/voikko-fi" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
