[package]
name = "voikko-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C FFI bindings for Voikko Finnish NLP (shared by Python, C#, Common Lisp, etc.)"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
voikko-core.workspace = true
voikko-fi = { workspace = true, features = ["handle"] }
